Final Commit + Read MD